welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:1: error: not found: type boolean
def alarmClock(day : Int,  vacation : boolean) {
                                      ^alarmClock:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return "off"
             ^alarmClock:4: warning: enclosing method alarmClock has result type Unit: return value discarded
      return "off"
      ^alarmClock:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return "off"
               ^alarmClock:7: warning: enclosing method alarmClock has result type Unit: return value discarded
        return "off"
        ^alarmClock:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return 10
               ^alarmClock:9: warning: enclosing method alarmClock has result type Unit: return value discarded
        return 10
        ^alarmClock:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return 10
             ^alarmClock:14: warning: enclosing method alarmClock has result type Unit: return value discarded
      return 10
      ^alarmClock:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return 10
               ^alarmClock:17: warning: enclosing method alarmClock has result type Unit: return value discarded
        return 10
        ^alarmClock:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return 7
               ^alarmClock:19: warning: enclosing method alarmClock has result type Unit: return value discarded
        return 7
        ^